fix spacing between table rows

--- a/peckuk-live/_table-v2.scss
+++ b/peckuk-live/_table-v2.scss
@@ -125,7 +125,7 @@
   table>tbody>tr>td,
   table>tfoot>tr>td {
     border: none;
-    line-height: 2.5;
+    // line-height: 2.5;
     // padding-bottom: 1.5rem;
     // padding-top: 1.5rem;
   }
